@@ -7,6 +7,19 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="TransparentCupsClient.AlertDialog"
            parent="@style/Theme.AppCompat.Light.Dialog.Alert"/>
+
+    <style name="Theme.Transparent" parent="@android:style/Theme.Dialog">
+      <item name="android:windowBackground">@android:color/transparent</item>
+      <item name="android:windowIsTranslucent">true</item>
+      <item name="android:windowNoTitle">true</item>
+      <item name="android:windowAnimationStyle">@null</item>
+<!--
+      <item name="android:windowContentOverlay">@null</item>
+      <item name="android:windowIsFloating">true</item>
+      <item name="android:backgroundDimEnabled">true</item>
+      -->
+    </style>
 </resources>
